# demo-game-platform

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: demo-ci-cd.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  recovery.py  recovery_helpers.py
app/core/database/: __init__.py  base.py  session.py  types.py
app/core/logging/: __init__.py  factory.py  settings.py  setup.py
app/core/value_objects/: __init__.py  money.py
app/modules/: __init__.py
app/modules/game/: __init__.py  enums.py  module_services.py  value_objects.py
app/modules/game/models/: __init__.py  game_hilo_details.py  game_session.py  game_settings.py
app/modules/game/repositories/: __init__.py  game_hilo_details_repository.py  game_session_repository.py  game_settings_repository.py
app/modules/game/usecases/: __init__.py  finish_game.py  place_bet.py  start_game.py
app/modules/identity/: __init__.py  enums.py  module_services.py  value_objects.py
app/modules/wallet/: __init__.py  enums.py  module_services.py  providers.py  value_objects.py
app/presentation/: __init__.py  bot.py  bot_helpers.py
app/presentation/handlers/: __init__.py  common.py  game.py  game_helpers.py  wallet.py  wallet_helpers.py
app/presentation/middlewares/: __init__.py  database.py  draining.py  error_handling.py  throttle.py  user_lock.py  utils.py
app/presentation/states/: __init__.py
migrations/: env.py
migrations/versions/: f5f9fd8c86be_init_tables.py
tests/: test_money.py  test_smoke.py  test_usecases.py
(+19 files in other folders)
